2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs: Added
	  zoom commands to main menu.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Added a function.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/TextUtil.cs,
	  Mono.TextEditor/TextEditorData.cs: Moved TextUtil functions into
	  Document.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/WorkerThread.cs: Abstracted safe threading
	  in a reuseable workerthread class.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextUtil.cs: Fixed
	  Bracket highlighting on text operations.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextUtil.cs:
	  changed next/prev word behaviour.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: No longer using
	  Thread.Abort ().

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs: Worked
	  on search&replace. (Bug 365439 - Replace usability issues)

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs: Fixed some
	  bugs caused by a former change.

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GapBuffer.cs,
	  Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/LineSplitterTests.cs,